k8s/ui/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: ui
spec:
  selector:
    app: ui
  ports:
    - port: 3000
      targetPort: 3000
